@@ -19,7 +19,7 @@ module Russian
        "м"=>"m","н"=>"n","о"=>"o","п"=>"p","р"=>"r",
        "с"=>"s","т"=>"t","у"=>"u","ф"=>"f","х"=>"h",
        "ц"=>"ts","ч"=>"ch","ш"=>"sh","щ"=>"sch","ъ"=>"'",
-       "ы"=>"yi","ь"=>"","э"=>"e","ю"=>"yu","я"=>"ya"
+       "ы"=>"y","ь"=>"","э"=>"e","ю"=>"yu","я"=>"ya"
     }.freeze
   
     UPPER = {
@@ -29,7 +29,7 @@ module Russian
        "Й"=>"Y","К"=>"K","Л"=>"L","М"=>"M","Н"=>"N",
        "О"=>"O","П"=>"P","Р"=>"R","С"=>"S","Т"=>"T",
        "У"=>"U","Ф"=>"F","Х"=>"H","Ц"=>"TS","Ч"=>"CH",
-       "Ш"=>"SH","Щ"=>"SCH","Ъ"=>"'","Ы"=>"YI","Ь"=>"",
+       "Ш"=>"SH","Щ"=>"SCH","Ъ"=>"'","Ы"=>"Y","Ь"=>"",
        "Э"=>"E","Ю"=>"YU","Я"=>"YA",
     }.freeze
 
